--- a/1º Ano/LS/Aula3/ficha3/index.html
+++ b/1º Ano/LS/Aula3/ficha3/index.html
@@ -63,60 +63,60 @@
             <!-- As cartas ficam assim!Duas imagens uma sobreposta a outra.-->
 
             <div class="card" data-logo="react">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/react.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/react.png" class="card-front" />
             </div>
             <div class="card" data-logo="vue">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/vue.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/vue.png" class="card-front" />
             </div>
 
             <div class="card" data-logo="javascript">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/javascript.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/javascript.png" class="card-front" />
             </div>
             <div class="card" data-logo="javascript">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/javascript.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/javascript.png" class="card-front" />
             </div>
             <div class="card" data-logo="react">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/react.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/react.png" class="card-front" />
             </div>
             <div class="card" data-logo="vue">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/vue.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/vue.png" class="card-front" />
             </div>
             <!-- <div class="card" data-logo="html">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/html.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/html.png" class="card-front" />
             </div>
             <div class="card" data-logo="svelte">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/svelte.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/svelte.png" class="card-front" />
             </div>
           
                           <div class="card" data-logo="angular">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/angular.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/angular.png" class="card-front" />
             </div>
               <div class="card" data-logo="bootstrap">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/bootstrap.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/bootstrap.png" class="card-front" />
             </div>
             
             <div class="card" data-logo="css">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/css.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/css.png" class="card-front" />
             </div>
 
             <div class="card" data-logo="backbone">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/backbone.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/backbone.png" class="card-front" />
             </div>
             <div class="card" data-logo="ember">
-              <img src="images/ls.png" class="card-front" />
-              <img src="images/ember.png" class="card-back" />
+              <img src="images/ls.png" class="card-back" />
+              <img src="images/ember.png" class="card-front" />
             </div>-->
           </div>
         </section>
